--- a/FrontEnd Web/course.html
+++ b/FrontEnd Web/course.html
@@ -67,21 +67,21 @@
         <div class="item">
           <img src="img/8.jpg" alt="...">
           <div class="carousel-caption">
-            <h2>Tranding Course By Ramandeep Singh</br>On Java Advance</h2>
+            <h2>Trending Course By Ramandeep Singh</br>On Java Advance</h2>
 			<p>Lets Start Learning</p>
           </div>
         </div>
         <div class="item active">
           <img src="img/9.png" alt="...">
           <div class="carousel-caption">
-             <h2>Tranding Course By Abhijit Das</br>On Angular</h2>
+             <h2>Trending Course By Abhijit Das</br>On Angular</h2>
 			<p>Lets Start Learning</p>
           </div>
         </div>
         <div class="item">
           <img src="img/10.jpg" alt="...">
           <div class="carousel-caption">
-            <h2>Tranding Course By Amrit Singh</br>On Cloud</h2>
+            <h2>Trending Course By Amrit Singh</br>On Cloud</h2>
 			<p>Lets Start Learning</p>
           </div>
         </div>
