"Updated and Remove Javascript"

--- a/FrontEnd Web/CourseJavascript.html
+++ b/FrontEnd Web/CourseJavascript.html
@@ -123,14 +123,14 @@
  <div class="container">
   <div class="row">
    <div class="col-sm-12 space_all blog_t">
-     <h1 class="text-center">Angular</h1>
+     <h1 class="text-center">JavaScript</h1>
    </div>
    <div class="col-sm-12 space_all">
     <div class="about_page_1 clearfix">
 	 <div class="col-sm-6">
 	   <div class="skills_1r clearfix">
 				   
-				   <p>Angular is a platform and framework for building single-page client applications using HTML and TypeScript.</p>
+				   <p>JavaScript is a programming language commonly used in web development.</p>
 				   <h4><a class="button_1" href="#">Start Learning</a></h4><br>
 				   <video controls="" style="width:100%;">
 		           <source src="#" type="video/mp4">
@@ -141,7 +141,7 @@
 	   <div class="about_page_1l clearfix">
 	    <div class="grid clearfix">
 		  <figure class="effect-jazz">
-			<a href="#"><img src="img/13.png" class="iw mgt" alt="img25"></a>		  </figure>
+			<a href="#"><img src="img/18.png" class="iw mgt" alt="img25"></a>		  </figure>
 	  </div> 
 	   </div>
 	  </div>
