--- a/FrontEnd Web/CourseHTML.html
+++ b/FrontEnd Web/CourseHTML.html
@@ -12,6 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
 	<link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
 	 <link href="css/ken-burns.css" rel="stylesheet" type="text/css" media="all" />
+	
+
   </head>
 <body>
 
@@ -117,20 +119,19 @@
 			</div>
 		   </div> 
 			</div>
-</section>
-
+	   </section>
 <section id="about_page">
  <div class="container">
   <div class="row">
    <div class="col-sm-12 space_all blog_t">
-     <h1 class="text-center">Angular</h1>
+     <h1 class="text-center">HTML</h1>
    </div>
    <div class="col-sm-12 space_all">
     <div class="about_page_1 clearfix">
 	 <div class="col-sm-6">
 	   <div class="skills_1r clearfix">
 				   
-				   <p>Angular is a platform and framework for building single-page client applications using HTML and TypeScript.</p>
+				   <p>Hypertext Markup Language, a standardized system for tagging text files to achieve font, colour, graphic, and hyperlink effects on World Wide Web pages.</p>
 				   <h4><a class="button_1" href="#">Start Learning</a></h4><br>
 				   <video controls="" style="width:100%;">
 		           <source src="#" type="video/mp4">
@@ -141,7 +142,7 @@
 	   <div class="about_page_1l clearfix">
 	    <div class="grid clearfix">
 		  <figure class="effect-jazz">
-			<a href="#"><img src="img/13.png" class="iw mgt" alt="img25"></a>		  </figure>
+			<a href="#"><img src="img/16.png" class="iw mgt" alt="img25"></a>		  </figure>
 	  </div> 
 	   </div>
 	  </div>
