--- a/FrontEnd Web/CourseWebApplications.html
+++ b/FrontEnd Web/CourseWebApplications.html
@@ -119,18 +119,19 @@
 			</div>
 </section>
 
+
 <section id="about_page">
  <div class="container">
   <div class="row">
    <div class="col-sm-12 space_all blog_t">
-     <h1 class="text-center">Angular</h1>
+     <h1 class="text-center">Web Applications</h1>
    </div>
    <div class="col-sm-12 space_all">
     <div class="about_page_1 clearfix">
 	 <div class="col-sm-6">
 	   <div class="skills_1r clearfix">
 				   
-				   <p>Angular is a platform and framework for building single-page client applications using HTML and TypeScript.</p>
+				   <p>A web application (or web app) is application software that runs on a web server, unlike computer-based software programs that are run locally on the operating system (OS) of the device.</p>
 				   <h4><a class="button_1" href="#">Start Learning</a></h4><br>
 				   <video controls="" style="width:100%;">
 		           <source src="#" type="video/mp4">
@@ -141,7 +142,7 @@
 	   <div class="about_page_1l clearfix">
 	    <div class="grid clearfix">
 		  <figure class="effect-jazz">
-			<a href="#"><img src="img/13.png" class="iw mgt" alt="img25"></a>		  </figure>
+			<a href="#"><img src="img/15.png" class="iw mgt" alt="img25"></a>		  </figure>
 	  </div> 
 	   </div>
 	  </div>
