"Mentor,Index page Updated and few page added"

--- a/FrontEnd Web/CourseCSS.html
+++ b/FrontEnd Web/CourseCSS.html
@@ -38,7 +38,7 @@
 					  <ul class="nav navbar-nav navbar">
 						 <li class=""><a class="color_1" href="index.html">HOME</a></li>
 						 <li class="active_1"><a class="color_1" href="course.html">COURSE</a></li>
-						 <li><a class="color_1" href="detail.html">MENTORS DETAIL</a></li>     
+						 <li><a class="color_1" href="detail.html">MENTORS</a></li>     
 					  </ul>
 					 
 					  <div class="top_1 clearfix">
