"Updated Mentors and Index Page, Also Added Few new pages"

--- a/FrontEnd Web/CourseSQL.html
+++ b/FrontEnd Web/CourseSQL.html
@@ -179,38 +179,41 @@
 </section>
 
 <section id="our">
-	<div class="container">
-	 <div class="row">
-	 <div class="col-sm-6">
-	  <div class="col-sm-12 space_all">
-	   
-	   <div class="col-sm-12 space_all">
-		<div class="our_5">
-		 <h4><a href="#"><i class="fa fa-map-marker"></i> Address</a></h4>
-	   <h5><a href="#">TIAA Global Business Services India</a></h5>
-	   <p><a href="#">Tower 4, World Trade Center</a></p>
-	   <h6><a href="#">Pune, Maharashtra</a></h6>
-		</div>
-		<div class="our_6">
-		 <h3 class="icon_h"><a href="#"><i class="fa fa-envelope"></i> Email</a></h3>
-		 <h4><a href="#">info@gmail.com</a></h4>
-		</div>
-		<div class="our_7">
-		 <h3 class="icon_h"><a href="#"><i class="fa fa-phone"></i> Phone</a></h3>
-		</div>
-		<div class="our_8">
-		 <h4><a href="#">+91 12 3456 7890 </a></h4>
-	   <h4><a href="#">+91 12 3456 7890 </a></h4>
-		</div>
-   
-	   </div>
-	  </div> 
-	 </div>
-	  </div>
-	 </div>
-	</div>
-   </section>  
+    <div class="container">
+        <div class="row">
+            <!-- <div class="col-sm-6"> -->
+            <!-- <div class="col-sm-12 space_all"> -->
 
+            <!-- <div class="col-sm-12 space_all"> -->
+            <div class="our_5 col-md-4">
+                <h4><a href="#"><i class="fa fa-map-marker"></i> Address</a></h4>
+                <h5><a href="#">TIAA Global Business Services India</a></h5>
+                <!-- <p><a href="#">Tower 4, World Trade Center</a></p>
+                <h6><a href="#">Pune, Maharashtra</a></h6> -->
+                <p><a href="#">Tower 4, World Trade Center, Pune, Maharashtra</a></p>
+            </div>
+            <div class="our_5 col-md-4">
+                <h4 class="icon_h"><a href="#"><i class="fa fa-envelope"></i> Email</a></h4>
+                <!-- <h4><a href="#">info@gmail.com</a></h4> -->
+                <p><a href="#">info@gmail.com</a></p>
+            </div>
+            <div class="our_5 col-md-4">
+                <h4 class="icon_h"><a href="#"><i class="fa fa-phone"></i> Phone</a></h4>
+                <!-- </div>
+            <div class="our_8"> -->
+                <!-- <h4><a href="#">+91 12 3456 7890 </a></h4>
+                <h4><a href="#">+91 12 3456 7890 </a></h4> -->
+                <p><a href="#">+91 12 3456 7890 </a></p>
+                <p><a href="#">+91 12 3456 7890 </a></p>
+            </div>
+
+            <!-- </div> -->
+            <!-- </div>  -->
+            <!-- </div> -->
+        </div>
+    </div>
+    </div>
+</section>
 </body>
        
 </html>
